# bg2e-native

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  bg2e-config.hpp.in  build_macos.sh  clean-deps.ps1  clean-deps.sh  deps-config.json  download-deps.js  macos-app-bundle.md  package.json  setup-deps-mac.sh  setup-deps-win.ps1
ExecutableTest/: CMakeLists.txt  tutorial.cxx
Visual Studio/: bg2e.sln  bg2e.vcxproj  bg2e.vcxproj.filters  example-app.vcxproj  example-app.vcxproj.filters
Visual Studio/basic/: basic.vcxproj  basic.vcxproj.filters
Visual Studio/cubes/: cubes.vcxproj  cubes.vcxproj.filters
Visual Studio/material/: material.vcxproj  material.vcxproj.filters
Visual Studio/render-to-texture/: render-to-texture.vcxproj  render-to-texture.vcxproj.filters
Visual Studio/scene-1/: scene.vcxproj  scene.vcxproj.filters
Visual Studio/workbench/: workbench.vcxproj  workbench.vcxproj.filters
VisualStudio/: bg2-engine.sln  bg2-engine.vcxproj  bg2-engine.vcxproj.filters
VisualStudio/app-example/: app-example.vcxproj  app-example.vcxproj.filters
Xcode/VulkanSDK/: MoltenVK_icd.json  VkLayer_khronos_validation.json  copy_libraries.sh
Xcode/bg2e.xcodeproj/: project.pbxproj
Xcode/example-app/: Info.plist
assets/: Copyright.txt  armchair.bg2  two_submeshes.mtl
bg2-base/: CMakeLists.txt
bg2-base/src/: image.cpp  path.cpp
bg2-db/: CMakeLists.txt
bg2-db/include/bg2-db/: image_load.hpp
bg2-db/include/bg2db/: all.hpp  buffer_load.hpp  image_load.hpp  image_write.hpp
bg2-db/src/: buffer_load.cpp  image_load.cpp  image_write.cpp
bg2-file/: CMakeLists.txt
bg2-file/src/: bg2-file.cpp  bg2_reader.cpp  binary_parser.cpp  convert.cpp  escaper.cpp  image_load.cpp  value.cpp
bg2-math/: CMakeLists.txt
bg2-math/include/bg2-math/: utils.hpp  vector.hpp
bg2-math/include/bg2math/: all.hpp  matrix.hpp  utils.hpp  vector.hpp
bg2-math/src/: utils.cpp
bg2-render/: CMakeLists.txt  compile-shaders.bat
bg2-render/include/bg2render/: all.hpp  buffer_utils.hpp  drawable_descriptor.hpp  drawable_item.hpp  index_buffer.hpp  material.hpp  offscreen_renderer.hpp  pbr_drawable_descriptor.hpp  pipeline.hpp  poly_list.hpp  render_pass.hpp  renderer.hpp  renderer_delegate.hpp  shader.hpp  single_time_command_buffer.hpp  swap_chain.hpp  texture.hpp  vertex_buffer.hpp  vk_buffer.hpp  vk_command_buffer.hpp  vk_definitions.hpp  vk_descriptor_pool.hpp  vk_descriptor_set.hpp  vk_device.hpp  vk_device_memory.hpp  vk_image.hpp  vk_image_view.hpp  vk_instance.hpp  vk_physical_device.hpp  vk_pipeline_layout.hpp  vk_sampler.hpp
bg2-render/shaders/: basic.frag  basic.vert
bg2-render/src/: buffer_utils.cpp  drawable_descriptor.cpp  drawable_item.cpp  offscreen_renderer.cpp  pbr_drawable_descriptor.cpp  pipeline.cpp  poly_list.cpp  render_pass.cpp  renderer.cpp  renderer_delegate.cpp  shader.cpp  single_time_command_buffer.cpp  swap_chain.cpp  texture.cpp  vk_buffer.cpp  vk_command_buffer.cpp  vk_descriptor_pool.cpp  vk_descriptor_set.cpp  vk_device.cpp  vk_device_memory.cpp  vk_image.cpp  vk_image_view.cpp  vk_instance.cpp  vk_physical_device.cpp  vk_pipeline_layout.cpp  vk_sampler.cpp
bg2-wnd/: CMakeLists.txt
bg2-wnd/include/bg2wnd/: all.hpp  application.hpp  glfw_application.hpp  glfw_window.hpp  keyboard_event.hpp  mouse_event.hpp  win32_application.hpp  win32_window.hpp  window.hpp  window_delegate.hpp
bg2-wnd/src/: application.cpp  glfw_application.cpp  glfw_window.cpp  keyboard_event.cpp  mouse_event.cpp  win32_application.cpp  win32_window.cpp  window.cpp
bg2e.xcodeproj/: project.pbxproj
bg2e.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cmake/: FindGLFW.cmake  FindVulkan.cmake
data/: test.bg2  test.bg2mat
doc/es/: index.md
examples/: README.md
examples/01_app/: main.cpp
examples/app/: main.cpp
examples/basic/: basic_example.cpp  main.cpp
examples/cube/: CMakeLists.txt  main.cpp
examples/cubes/: cubes_example.cpp  main.cpp  phong_shader.cpp  phong_shader.hpp
examples/glfw/: CMakeLists.txt  main.cpp
examples/material/: material_example.cpp
examples/render_to_texture/: render-to-texture-Info.plist  render_to_texture_example.cpp
examples/scene_1/: scene_1_example.cpp
examples/vk-instance/: CMakeLists.txt  main.cpp
examples/wnd/: CMakeLists.txt  main.cpp
examples/workbench/: workbench.cpp
include/: bg2e.hpp  bg2engine.hpp
include/bg2e/: all.hpp  base.hpp  bg2e.hpp  bgfx_tools.hpp  common.hpp  db.hpp  export.hpp  math.hpp  platform.hpp  render.hpp  scene.hpp  shaders.hpp  types.hpp  utils.hpp  wnd.hpp
scripts/: build.js  build.sh  command.js  dependencies.js  download.js  git.js  install-deps.js  package_vulkan_resources.sh
shaders/: README  build.js  build.sh  config.js
shaders/include/: example_shaders.h  example_shaders.h.template  shaders.h  shaders.h.template
shaders/src/: basic_forward.frag.glsl  basic_forward.vert.glsl  brdf_lut.comp.glsl  color_attachment_canvas.vert.glsl  color_correction.comp.glsl  cubemap_renderer.vert.glsl  irradiance_map_renderer.frag.glsl  skybox_renderer.frag.glsl  skybox_renderer.vert.glsl  skybox_renderer_metal.frag.glsl  specular_reflection_renderer.frag.glsl  sphere_to_cubemap.frag.glsl  sphere_to_cubemap.vert.glsl
src/app/: AppController.cpp  KeyboardEvent.cpp  MainLoop.cpp  Window.cpp
src/base/: Environment.cpp  Image.cpp  Light.cpp  Material.cpp  PolyList.cpp  Texture.cpp  camera.cpp  image.cpp  light.cpp  material.cpp  matrix_stack.cpp  matrix_state.cpp  path.cpp  pipeline.cpp  poly_list.cpp  projection_strategy.cpp  referenced_pointer.cpp  render_queue.cpp  shader.cpp  texture.cpp
src/db/: bg2_reader.cpp  binary_parser.cpp  drawable_db.cpp  image_load.cpp  image_write.cpp  stb_image.h  texture_load.cpp
src/math/: utils.cpp
src/render/: Renderer.cpp  forward_render_layer.cpp  renderer.cpp
src/scene/: camera.cpp  camera_component.cpp  component.cpp  draw_visitor.cpp  drawable.cpp  node.cpp  node_visitor.cpp  scene_object.cpp  transform.cpp
src/shaders/: phong.cpp
src/tools/: Json.cpp  JsonParser.cpp  JsonToken.cpp
src/utils/: load.cpp  (+3 more)
(+541 files in other folders)
